--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -69,6 +69,12 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="전화 연결 (CALL)"/>
+    <Button
+        android:id="@+id/smsBtn"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="문자보내기"/>
+
 
 
 
