--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -74,6 +74,18 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="문자보내기"/>
+    <Button
+        android:id="@+id/naverWebBtn"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="네이버 화면으로 이동"/>
+
+    <Button
+        android:id="@+id/kakaoStoreBtn"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="카카오 앱 스토어로 이동"/>
+
 
 
 
